renkko/media/jellyfin/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "media.senk0.com"
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
